; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_nsxfobj.c_acpi_get_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_nsxfobj.c_acpi_get_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_namespace_node = type { i32 }

@AE_BAD_PARAMETER = common dso_local global i32 0, align 4
@ACPI_MTX_NAMESPACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_get_id(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.acpi_namespace_node*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %11, i32* %3, align 4
  br label %37

12:                                               ; preds = %2
  %13 = load i32, i32* @ACPI_MTX_NAMESPACE, align 4
  %14 = call i32 @acpi_ut_acquire_mutex(i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i64 @ACPI_FAILURE(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %37

20:                                               ; preds = %12
  %21 = load i32, i32* %4, align 4
  %22 = call %struct.acpi_namespace_node* @acpi_ns_map_handle_to_node(i32 %21)
  store %struct.acpi_namespace_node* %22, %struct.acpi_namespace_node** %6, align 8
  %23 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %6, align 8
  %24 = icmp ne %struct.acpi_namespace_node* %23, null
  br i1 %24, label %29, label %25

25:                                               ; preds = %20
  %26 = load i32, i32* @ACPI_MTX_NAMESPACE, align 4
  %27 = call i32 @acpi_ut_release_mutex(i32 %26)
  %28 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %28, i32* %3, align 4
  br label %37

29:                                               ; preds = %20
  %30 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %6, align 8
  %31 = getelementptr inbounds %struct.acpi_namespace_node, %struct.acpi_namespace_node* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32*, i32** %5, align 8
  store i32 %32, i32* %33, align 4
  %34 = load i32, i32* @ACPI_MTX_NAMESPACE, align 4
  %35 = call i32 @acpi_ut_release_mutex(i32 %34)
  store i32 %35, i32* %7, align 4
  %36 = load i32, i32* %7, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %29, %25, %18, %10
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @acpi_ut_acquire_mutex(i32) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local %struct.acpi_namespace_node* @acpi_ns_map_handle_to_node(i32) #1

declare dso_local i32 @acpi_ut_release_mutex(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
